feat: add whole-team winner quick-select to segment editor (ATW-4h05)
Recording a tag team win still required selecting each partner
individually in the winners combo, leaving room for the same kind of
partial-roster mistake ATW-z2x2 fixed defensively in adjudication. Each
team with 2+ members now gets a "Team N Wins" button that marks every
member as a winner in one click.

Completes ATW-4h05's remaining acceptance criterion (AC3).